# nn-template

./: cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.repository_name }}/: env.yaml  pyproject.toml
{{ cookiecutter.repository_name }}/conf/: default.yaml
{{ cookiecutter.repository_name }}/conf/data/: default.yaml
{{ cookiecutter.repository_name }}/conf/model/: default.yaml
{{ cookiecutter.repository_name }}/conf/optim/: default.yaml
{{ cookiecutter.repository_name }}/src/{{ cookiecutter.package_name }}/: run.py
{{ cookiecutter.repository_name }}/src/{{ cookiecutter.package_name }}/data/: datamodule.py  dataset.py
{{ cookiecutter.repository_name }}/src/{{ cookiecutter.package_name }}/modules/: losses.py  module.py
{{ cookiecutter.repository_name }}/src/{{ cookiecutter.package_name }}/modules/models/: cnn.py  ffn.py  siamese.py
{{ cookiecutter.repository_name }}/src/{{ cookiecutter.package_name }}/pl_modules/: pl_module.py
{{ cookiecutter.repository_name }}/tests/: conftest.py  test_checkpoint.py  test_configuration.py
